basics/pythonNotes.txt
Welcome to this new section!

If during this section you encounter an error when you try to execute Python, know that it may be due to two common reasons whose solutions are given below. If you have an issue  that is not included below, feel free to raise a question in the Q&A.

Question 1. When I run python basics.py on Windows, I get the error:

'python' is not recognized as an internal or external command operable program or batch file

Solution 1: If you are using Visual Studio Code, try restarting Visual Studio Code and then try running python basics.py again. If it doesn't work, go to Solution 2 below.

Solution 2: Try uninstalling Python and then install it again, but this time make sure that the option Add Python to Path is marked as checked during the installation process.

Solution 3: Use py -3 basics.py instead of python basics.py. It does the same thing.

Solution 4: If you think Python was installed but it still doesn't start, then it might be a problem with the environment variables. Please see this link to fix that: https://projects.raspberrypi.org/en/projects/using-pip-on-windows/4



Question 2. When I run python3 basics.py I get the error:

>>> python3 basics.py
File "<stdin>", line 1
python3 basics.py
                         ^
SyntaxError: invalid syntax
Solution: You are trying to execute the command python3 basics.py inside a Python shell. Type exit() and press Enter to exit the Python shell and get back to the terminal. Then execute python3 basics.py again on the terminal.

The basics - A small program

Here is a summary of what you learned in this section:

Python 3 and the Visual Studio Code IDE is used in the videos, but you can use any IDE.

The Python interactive shell (shown with >>>) is a quick way to execute Python code to see how it works.

Python programs are written in .py files.

You can make a program that shows the current date and time using these lines of code:

import datetime
print("The date and time is ", datetime.datetime.now())

DATA TYPES - LIST'S AND DICTIONARIES 

In this section you learned that:

Integers are for representing whole numbers:

rank = 10
eggs = 12
people = 3
Floats represent continuous values:

temperature = 10.2
rainfall = 5.98
elevation = 1031.88
Strings represent any text:

message = "Welcome to our online shop!"
name = "John"
serial = "R001991981SW"
Lists represent arrays of values that may change during the course of the program:

members = ["Sim Soony", "Marry Roundknee", "Jack Corridor"]
pixel_values = [252, 251, 251, 253, 250, 248, 247]
Dictionaries represent pairs of keys and values:

phone_numbers = {"John Smith": "+37682929928", "Marry Simpons": "+423998200919"}
volcano_elevations = {"Glacier Peak": 3213.9, "Rainer": 4392.1}
Keys of a dictionary can be extracted with:

phone_numbers.keys()
Values of a dictionary can be extracted with:

phone_numbers.values()
Tuples represent arrays of values that are not to be changed during the course of the program:

vowels = ('a', 'e', 'i', 'o', 'u')
one_digits = (0, 1, 2, 3, 4, 5, 6, 7, 8, 9)
To find out what attributes a type has:

dir(str)
dir(list)
dir(dict)
To find out what Python builtin functions there are:

dir(__builtins__)
Documentation for a Python command can be found with:

help(str)
help(str.replace)
help(dict.values)


DICTIONARIES: 

In this section you learned that:

Lists, strings, and tuples have a positive index system:

["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"]
   0      1      2      3      4      5      6
And a negative index system:

["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"]
  -7     -6     -5     -4     -3     -2     -1
In a list, the 2nd, 3rd, and 4th items can be accessed with:

days = ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"]
days[1:4]
Output: ['Tue', 'Wed', 'Thu']
First three items of a list:

days = ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"]
days[:3]
Output:['Mon', 'Tue', 'Wed'] 
Last three items of a list:

days = ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"]
days[-3:]
Output: ['Fri', 'Sat', 'Sun']
Everything but the last:

days = ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"]
days[:-1] 
Output: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'] 
Everything but the last two:

days = ["Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"]
days[:-2] 
Output: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'] 
A single in a dictionary can be accessed using its key:

phone_numbers = {"John Smith":"+37682929928","Marry Simpsons":"+423998200919"}
phone_numbers["Marry Simpsons"]
Output: '+423998200919'